ecmascript/parser/tests/test262-error-references/fail/6ac4f95d48362a35.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/6ac4f95d48362a35.js:1:17
  |
1 | 'use strict'; ('\001')
  |                 ^^

